; ModuleID = '/home/carl/AnghaBench/mruby/src/extr_string.c_str_init_modifiable.c'
source_filename = "/home/carl/AnghaBench/mruby/src/extr_string.c_str_init_modifiable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RString = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.RString* (i32*, %struct.RString*, i8*, i64)* @str_init_modifiable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.RString* @str_init_modifiable(i32* %0, %struct.RString* %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.RString*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.RString*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store %struct.RString* %1, %struct.RString** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %10 = load i64, i64* %9, align 8
  %11 = call i64 @RSTR_EMBEDDABLE_P(i64 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %4
  %14 = load %struct.RString*, %struct.RString** %7, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = load i64, i64* %9, align 8
  %17 = call %struct.RString* @str_init_embed(%struct.RString* %14, i8* %15, i64 %16)
  store %struct.RString* %17, %struct.RString** %5, align 8
  br label %24

18:                                               ; preds = %4
  %19 = load i32*, i32** %6, align 8
  %20 = load %struct.RString*, %struct.RString** %7, align 8
  %21 = load i8*, i8** %8, align 8
  %22 = load i64, i64* %9, align 8
  %23 = call %struct.RString* @str_init_normal(i32* %19, %struct.RString* %20, i8* %21, i64 %22)
  store %struct.RString* %23, %struct.RString** %5, align 8
  br label %24

24:                                               ; preds = %18, %13
  %25 = load %struct.RString*, %struct.RString** %5, align 8
  ret %struct.RString* %25
}

declare dso_local i64 @RSTR_EMBEDDABLE_P(i64) #1

declare dso_local %struct.RString* @str_init_embed(%struct.RString*, i8*, i64) #1

declare dso_local %struct.RString* @str_init_normal(i32*, %struct.RString*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
